# agentic-test-automation

./: .env.example  .gitignore  README.md  SETUP.md  playwright-mcp-config.json  project_context.example.md  project_map.example.md  pyproject.toml  pyrightconfig.json
.claude/: settings.json
.claude/hooks/: guard-deps.py
docs/: ARCHITECTURE.md  WORKFLOW.md
output/: package-lock.json  package.json  playwright.config.ts
scripts/: README.md  _mtls.py  run_one.py  save_auth_state.py  seed_kb.py  step0_verify_tool_calling.py  step0b_verify_embeddings.py  step0c_xray_flavor.py  step0d_verify_reasoning_effort.py  test_xray.py  verify_auth_state.py
src/ai_test_gen/: config.py  gitlab_client.py  llm.py  local_testcases.py  models.py  mtls.py  orchestrator.py  playwright_mcp.py  test_runner.py  xray_client.py
src/ai_test_gen/agents/: _context.py  _dom_probe.py  _history.py  _locator_steer.py  _run_failure.py  _vision_aid.py  generator.py  healer.py  planner.py  vision.py
src/ai_test_gen/prompts/: distiller.md  dom_probe.md  generator.md  healer.md  mapper.md  planner.md  planner_vision.md  vision_aid.md
tests/: conftest.py  test_agents.py  test_config.py  test_context.py  test_dom_probe.py  test_gitlab_client.py  test_history.py  test_llm.py  test_local_testcases.py  test_locator_steer.py  test_models.py  test_orchestrator.py  test_playwright_mcp.py  test_rag_discover.py  test_rag_distiller.py  test_rag_embeddings.py  test_rag_extract.py  test_rag_mapper.py  test_rag_retriever.py  test_rag_seeding.py  test_rag_store.py  test_rag_tools.py  test_rag_verify.py  test_run_failure.py  test_runner.py  test_templates.py  test_vision.py  test_xray_client.py
(+12 files in other folders)
