[project]
name = "agentic-test-automation"
version = "0.0.1"
description = "AI-driven Playwright test generation scaffold (Phase 0 — Access, Tooling & Gateway Verification)"
requires-python = ">=3.12"
dependencies = [
    "openai>=1.0",
    "python-dotenv>=1.0",
    "httpx>=0.27",
    "requests>=2.31",
    "cryptography>=42.0",   # decrypt PKCS#12 (.p12/.pfx) mTLS bundles when MTLS_PKCS12_FILE is set
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# Import package is `ai_test_gen` (src layout); distribution name stays `agentic-test-automation`.
packages = ["src/ai_test_gen"]

[dependency-groups]
dev = [
    "ruff>=0.6",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]

[tool.pyright]
venvPath = "."
venv = ".venv"
pythonVersion = "3.12"
include = ["scripts", "src"]
